force-app/main/default/objects/SKU_Inventory__c/SKU_Inventory__c.object-meta.xml
<CustomObject>
    <label>SKU Inventory</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Inventory Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKU Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>