force-app/main/default/objects/SKU_Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>SKU Inventory</relationshipLabel>
    <relationshipName>SKU_Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>