force-app/main/default/objects/SKU_Inventory__c/fields/Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Hand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>