force-app/main/default/objects/SKU_Inventory__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SKU</label>
    <referenceTo>SKU__c</referenceTo>
    <relationshipLabel>SKU Inventory</relationshipLabel>
    <relationshipName>SKU_Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>